src/css/base.css
/* ... */
.datepicker .today {
  background-color: #ffdb99;
}

.datepicker .new, .datepicker .old {
  color: #aaa;
}

.datepicker .hours {
  line-height: 2;
}

/* tab fix */
.tab-content {
  overflow: visible;
}

a[data-target='#Alerts']:before {
  content: "\f071";
  font-family: FontAwesome;
  color: #B94A48;
  margin-right: .5em;
}

td.spacer, .table-striped tbody>tr:nth-child(odd)>td.spacer {
  background-color: transparent;
  border: none;
}

tbody+thead>tr:first-child>td {
  border: none;
}

/* fixed-pane-bottom */
.fixed-pane-wrapper {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.navigation-pinned .fixed-pane-wrapper {
  left: 80px;
  width: calc(100% - 80px);
}

.fixed-pane {
	box-shadow: 0 0 10px rgba(100,100,100,.5);
}

.fixed-pane-bottom {
  left: 0;
  overflow: auto;
  height: 200px;
  background-color: #fff;
  width: 100%;
}

.fixed-pane-right {
  right: 0;
  overflow: auto;
  height: 100%;
  width: 100%;
}

.fixed-pane .fixed-pane-inner {
  position: relative;
  padding: 10px 20px;
}

.workflow-detail {
	position: fixed;
	top: 0;
	right: 0;
	z-index: 1021;
}

.ui-resizable-handle.ui-resizable-n {
	background-color: #F6F6F6;
	position: absolute;
	top: 0;
	left: 0;
	height: 10px;
	width: 100%;
	cursor: ns-resize;
}

.ui-resizable-handle.ui-resizable-w {
	background-color: #E5E5E5;
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 10px;
	cursor: ew-resize;
}

.ui-resizable-n:after {
	content: "\f0c9";
	color: #666;
	font-family: FontAwesome;
	font-size: 60%;
	position: absolute;
	top: -5px;
	left: 50%;
}

.ui-resizable-w:after {
	content: "\f0c9";
	color: #666;
	font-family: FontAwesome;
	font-size: 60%;
	position: absolute;
	top: 50%;
	left: 0;
	transform: rotate(270deg) ;
	-webkit-transform: rotate(270deg) ;
	-moz-transform: rotate(270deg) ;
	-o-transform: rotate(270deg) ;
	-ms-transform: rotate(270deg) ;
}

.listview {
  width: 100%;
/*  overflow: hidden;*/
  position: relative;
}

/*.tree .indent {
	display: inline-block;
	border-right: 1px dotted red;
    vertical-align: middle;	
	height: 100%;
    width: 20px;
}*/

.tree {
	margin-left: 10px;
}

.tree .indent {
	display: inline-block;
	border-right: 1px dotted red;
	margin-left: 10px;
	height: 100%;
	vertical-align: top;
}

.tree .leaf span:nth-last-child(3) {
	display: inline-block;
	border-right: 1px dotted red;
	margin-left: 10px;
	height: 50%;
	vertical-align: top;
}

.tree .value {
	display: inline-block;
}

.tree .td {
	padding: auto;
}

.tree th {
	position: relative;
}

.tree th.node .value {
	padding-top: 5px;
}

.tree th.node span:last-child:before {
	content:  "\f117";
	display: inline-block;
	font-family: "FontAwesome";
	font-weight: normal;
	background-color: #fff;
	margin-left: -9px;
	margin-right: 10px;
	color: red;
	border: none;
}

/*.tree span:last-child:after {
	content: " ";
	font-size: 0;
	line-height: 0;
	border-bottom: 1px dotted red;
	display: block;
	white-space: pre;
	margin-left: -2px;
	margin-bottom: -2px;
	height: 2px;
	bottom: 0;
}*/

.tree .branch span:last-child:before, .tree .leaf span:last-child:before {
	content: " ";
	border-bottom: 1px dotted red;
	display: inline-block;
	width: 10px;
	margin-left: -2px;
	margin-right: 10px;
    margin-top: .7em;
	vertical-align: top;
}

.tree .leaf span:last-child:after {
	
}

.tree th.node span:last-child:after {
	content:  "";
	color: green;
}

.tree th.leaf span:last-child:after {
	height: 1px;
}

.tree th.node span:nth-last-child(1):after {
	display: inline-block;
	height: 50%;
}

.tree .node .value:before {
	content: "";
	display: inline-block;
	margin: 5px 0;
}

textarea.note {
	height: 1.3em;
	padding: .5%;
	width: 99%;
	border: none;
	border-bottom: 1px solid #eee;
	box-shadow: none;
	outline: none;
	resize: none;
	/*max-height: 15em;*/
	overflow: auto;
}

/**[contenteditable="true"]:after {
  content: "\f14B";
  font-family: "FontAwesome";
}*/

#step-errors th.info {
  min-width: 300px;
}

#step-errors td.info {
  width: 50%;
}

td.break {
  word-break: break-word;
}

.overflow .row-fluid > div {
  overflow: auto;
}

.input-append-small input,
.input-prepend-small input,
.input-prepend-small .add-on,
.input-append-small .add-on {
  padding: 0 6px;
  font-size: 10.5px;
  height: 24px;
  min-height: 24px;
}

.nav.no-margin {
  margin-bottom: 5px;
}

.btn-controls {
  display: inline-block;
  vertical-align: middle;
  white-space: nowrap;
}

.btn-controls a.label {
  margin: 0;
  margin-right: -2px;
}

.table-condensed .btn-controls {
  margin-top: -4px;
}


td .input-append {
  margin: 0;
}

.autocomplete-box {
  position: relative;
}

input.autocomplete {
  background: transparent;
}

.autocomplete-hint {
  position: absolute;
  top: 0;
  left: 0;
  color: #666;
  z-index: -1;
}

.autocomplete-box .active {
  color: #ffffff;
  text-decoration: none;
  background-color: #0081c2;
  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
}

.items-listing {
  margin: 14px 0;
}

.items-listing .label {
  margin-right: .5em;
}

.label-info a {
  color: #fff;
}

.label-info a:hover {
  text-decoration: none;
}

.nav li+.nav-subheader {
	margin: 0 0 0 -15px;
	font-size: 10px;
}

.break-word {
	word-wrap: break-word;
}

.legend {
	float: left;
}

.legend ul, .legend li {
	list-style: none;
	margin: 0;
	padding: 0;
	text-indent: 0;
}

.legend li {
	display: block;
}

.legend .legend-color-box {
	display: inline-block;
	width: 1em;
	height: 1em;
	border-radius: 2px;
	margin-right: 10px;
	vertical-align: text-bottom;
}

#wrap {
  transition: transform 200 ease-in-out;
}
/* ... */

